# Introduction_Computational_Models

./: .gitignore
Assignment_1/src/: CMakeLists.txt  Makefile  README.txt  la1  la1.cpp
Assignment_1/src/imc/: MultilayerPerceptron.cpp  MultilayerPerceptron.h  util.h
Assignment_2/results/divorce/divorce_i1000_l1_h16_e07_m1_f1_s/: seed_1.txt  seed_2.txt  seed_3.txt  seed_4.txt  seed_5.txt  stats.txt  time_taken.txt
Assignment_2/results/divorce/divorce_i1000_l1_h4_e07_m1_f1_s/: seed_1.txt  seed_2.txt  seed_3.txt  seed_4.txt  seed_5.txt  stats.txt  time_taken.txt
Assignment_2/results/divorce/divorce_i1000_l1_h64_e07_m1_f1_s/: seed_1.txt  seed_2.txt  seed_3.txt  seed_4.txt  seed_5.txt  stats.txt  time_taken.txt
Assignment_2/results/divorce/divorce_i1000_l1_h8_e07_m1_f1_s/: seed_1.txt  seed_2.txt  seed_3.txt  seed_4.txt  seed_5.txt  stats.txt  time_taken.txt
Assignment_2/results/xor_i1000_l1_h8_e07_m1_f1_s/: xor_i1000_l1_h8_e07_m1_f1_s.eps
Assignment_2/results/xor_i1000_l2_h64_e07_m1_f1_s/: seed_1.txt  seed_3.txt  seed_4.txt  seed_5.txt  xor_i1000_l2_h64_e07_m1_f1_s.eps
Assignment_2/src/: Makefile  la2.cpp  training_error_plot.sh  validation_error_plot.sh
Assignment_2/src/imc/: MultilayerPerceptron.cpp  MultilayerPerceptron.h  util.h
Assignment_2/src/plotting/: training_error_plot.sh
Assignment_3/: german.py
Assignment_3/plotting/: plot_data.py
Assignment_3/results/plots/: best_radii.xlsx
Assignment_3/src/: rbf.py
Assignment_4/: libsvm.py
Assignment_4/src/: libsvm.ipynb  libsvm.py  references.bib
(+247 files in other folders)
